--- a/modules/matterhorn-engage-ui/src/main/resources/ui/css/oc.segments.css
+++ b/modules/matterhorn-engage-ui/src/main/resources/ui/css/oc.segments.css
@@ -49,3 +49,9 @@
 .scrollButtons.right {
     right: -52px;
 }
+
+.oc-segments-time {
+  padding-left: 5px;
+  padding-right: 5px;
+  vertical-align: top;
+}
