--- a/shared-resources/player/engage-hybrid-player/css/player-multi-hybrid-icons.css
+++ b/shared-resources/player/engage-hybrid-player/css/player-multi-hybrid-icons.css
@@ -100,7 +100,14 @@ input:hover
   background-position:      0px -210px;
   width:                    16px;
   height:                   18px;
-  
+}
+
+.oc_btn-play-clicked
+{
+  background:               transparent url("../img/oc_icons.png");
+  background-position:      -60px -210px;
+  width:                    16px;
+  height:                   18px;
 }
 
 .oc_btn-play-over
@@ -116,6 +123,14 @@ input:hover
 {
   background:               transparent url("../img/oc_icons.png");
   background-position:      0px -90px;
+  width:                    18px;
+  height:                   20px;
+}
+
+.oc_btn-pause-clicked
+{
+  background:               transparent url("../img/oc_icons.png");
+  background-position:      -60px -90px;
   width:                    18px;
   height:                   20px;
 }
