--- a/shared-resources/player/engage-hybrid-player/css/embed-hybrid-player.css
+++ b/shared-resources/player/engage-hybrid-player/css/embed-hybrid-player.css
@@ -69,12 +69,12 @@ table
 
 #oc_video-player-controls
 {
-  height:                   36px;
+  height:                   30px;
   width:                    100%;
-  background-image:         url("../img/icons.png");
+  background-image:         url("../img/oc_icons.png");
   background-position:      0 0px;
-  margin-top:               5px;
-  margin-bottom:            5px;
+  /*margin-top:               5px;
+  margin-bottom:            5px; */
 }
 
 #oc_video-time
@@ -83,15 +83,15 @@ table
   text-align:               left;
   font-size:                0.8em;
   color:                    #FFFFFF;
-  background-image:         url("../img/icons.png");
-  background-position:      0 0;
+  margin-top:               5px;
+/*  background-image:         url("../img/icons.png");
+  background-position:      0 0; */
   width:                    30%;
-  height:                   36px;
+  height:                   30px;
 }
 
 #simpleEdit 
 {
-  margin-top:               12px;
   margin-left:              10px;
   font-size:                1.2em;
 }
@@ -133,13 +133,14 @@ table
   float:                    left;
   width:                    40%;
   text-align:               right;
-  margin-top:               12px;
+  margin-top:               5px;
 }
 
 #oc_sound
 {
   float:                    left;
   width:                    5%;
+  margin-top:               5px;
   text-align:               center;
 }
 
@@ -147,7 +148,7 @@ table
 {
   margin:                   0;
   padding:                  0;
-  float:                    right;
+  float:                    left;
   margin-right:             10px;
 }
 
@@ -164,8 +165,8 @@ table
   position:                 absolute;
   visibility:               hidden;
   border-top:               1px solid white
-}   
-        
+}
+       
 #oc_volume-dropdown li ul li
 {   
   float:                    none;
@@ -175,9 +176,9 @@ table
 #oc_volume-dropdown-div
 {   
   height:                   28px;
-  padding-top:              4px;
-  background-image:         url("../img/icons.png");
-  background-position:      0 -4px;
+  /*padding-top:              4px;
+  background-image:         url("../img/icons.png"); 
+  background-position:      0 -4px; */
   text-align:               center;
   margin-left:              -50px;
 }
@@ -185,10 +186,10 @@ table
 #oc_volume-slider
 {
   width:                    8%;
-  height:                   36px;
+  height:                   30px;
   float:                    left;
-  margin-right:             15px;
-  margin-left:              15px;
+  /*margin-right:             15px;
+  margin-left:              15px;*/
 }
 
 .oc_slider-volume-Rail 
@@ -198,7 +199,7 @@ table
   border:                   1px solid #999999;
   position:                 relative;
   background:               #fff;
-  margin-top:               12px;
+  margin-top:               8px;
 }
 
 .oc_slider-volume-Thumb:focus
@@ -209,12 +210,12 @@ table
 
 .oc_slider-volume-Thumb
 {
-  background:               transparent url("../img/icons.png");
-  background-position:      0 -396px;
+  background:               transparent url("../img/oc_icons.png");
+  background-position:      -30px -270px;
   margin:                   0px;
   padding:                  0px;
-  width:                    15px; 
-  height:                   9px;
+  width:                    10px; 
+  height:                   10px;
   position:                 absolute;
   margin-top:               -3px;
 }
@@ -237,18 +238,20 @@ table
 
 .oc-slider-volume-Thumb
 {
-  background:               transparent url("../img/icons.png");
-  background-position:      0 -396px;
+  background:               transparent url("../img/oc_icons.png");
+  background-position:      -30px -270px;
   margin:                   0px;
   padding:                  0px;
-  width:                    15px; 
-  height:                   9px;
+  width:                    10px; 
+  height:                   10px;
   position:                 absolute;
   margin-top:               -3px;
 }
 
+
 #oc_video-cc
 {
+  margin-top:               5px;
   float:                    left;
   width:                    5%;
   text-align:               center;
@@ -257,8 +260,9 @@ table
 
 #oc_video-size-controls
 {
+  margin-top:               5px;
   float:                    right;
-  width:                    12%;
+  width:                    5%;
 }
 
 #oc_video-size-dropdown
@@ -303,9 +307,9 @@ table
 #oc_video-size-dropdown-div
 {   
   height:                   28px;
-  padding-top:              4px;
+  /*padding-top:              4px;
   background-image:         url("../img/icons.png");
-  background-position:      0 -4px;
+  background-position:      0 -4px;*/
   text-align:               center;
 }
 
@@ -337,30 +341,32 @@ table
 
 .scrubber-button 
 {
-  background:               transparent url("../img/icons.png");
-  background-position:      0 -445px;
-  height:                   15px;
-  width:                    13px;
-  margin-top:               -4px;
-  margin-left:              -6px;
+  background:               transparent url("../img/oc_icons.png");
+  background-position:      -60px -360px;
+  height:                   19px;
+  width:                    9px;
+  /*margin-top:               -4px;
+  margin-left:              -6px;*/
   position:                 relative; 
   border:                   0px;
   top:                      0px; 
   z-index:                  2;
+  margin-left:              -4px;
 }
 
 #draggable 
 { 
-  background:               transparent url("../img/icons.png");
-  background-position:      0 -445px;
-  height:                   15px;
-  width:                    13px;
-  margin-top:               -19px;
-  margin-left:              -6px;
+  background:               transparent url("../img/oc_icons.png");
+  background-position:      -60px -360px;
+  height:                   19px;
+  width:                    9px;
+  /*margin-top:               -4px;
+  margin-left:              -6px;*/
   position:                 relative; 
   border:                   0px;
-  top:                      3px; 
+  top:                      -19px;
   z-index:                  3;
+  margin-left:              -4px;
 }
 
 .progress-segment 
@@ -388,15 +394,17 @@ table
 
 .progress-list 
 {
-  background-image:url("../img/icons.png");
-  background-position: 0 -432px;
+  /*background-image:url("../img/icons.png");
+  background-position: 0 -432px;*/
+  background-color:                    #FFFFFF;
   height: 7px;
 }
 
 .load-progress 
 {
-  background-image:url("../img/icons.png");
-  background-position: 0 -419px;
+  /*background-image:url("../img/icons.png");
+  background-position: 0 -419px;*/
+  background-color:                    #E99A8F;
   height: 7px;
   display:block;
   margin-top:0;
@@ -406,21 +414,24 @@ table
 
 .play-progress 
 {
-  background-image:url("../img/icons.png");
-  background-position: 0 -405px;
+  /*background-image:url("../img/icons.png");
+  background-position: 0 -405px;*/
+  background-color:                    #DE6555;
   display:block;
   height:7px;
   margin-top:-7px;
   position:relative;
 }
 
+
 .scrubber-channel 
 {
-   display:block;
+  display:block;
   margin-top:0;
   padding-right:0px;
   position:relative;
   top: -7px;
+  height: 7px;
 }
 
 .progress-text 
