--- a/shared-resources/player/engage-hybrid-player/css/player-multi-hybrid-icons.css
+++ b/shared-resources/player/engage-hybrid-player/css/player-multi-hybrid-icons.css
@@ -251,15 +251,15 @@ input:hover
   width:                    48px;
   text-align:               center;
   margin-right:             5px;
-  margin-top:               4px;
+  /*margin-top:               4px;*/
 }
 
 .oc_btn-singleDisplay
 {
   background:               transparent url("../img/oc_icons.png");
-  background-position:      -180px -330px;
-  width:                    44px;
-  height:                   18px;
+  background-position:      -200px -330px;
+  width:                    25px;
+  /*height:                   18px;*/
   margin-right:             5px;
   margin-left:              5px;
 }
@@ -269,7 +269,7 @@ input:hover
   background:               transparent url("../img/oc_icons.png");
   background-position:      -120px -330px;
   width:                    44px;
-  height:                   18px;
+  /*height:                   18px;*/
   margin-right:             5px;
   margin-left:              5px;
 }
@@ -279,7 +279,7 @@ input:hover
   background:               transparent url("../img/oc_icons.png");
   background-position:      -0px -330px;
   width:                    44px;
-  height:                   18px;
+  /*height:                   18px;*/
   margin-right:             5px;
   margin-left:              5px;
 }
@@ -287,9 +287,9 @@ input:hover
 .oc_btn-bigRightDisplay
 {
   background:               transparent url("../img/oc_icons.png");
-  background-position:      -60px -330px;
+  background-position:      -64px -330px;
   width:                    40px;
-  height:                   36px;
+  /*height:                   36px;*/
   margin-right:             5px;
   margin-left:              5px;
 }
@@ -299,7 +299,7 @@ input:hover
   background:               transparent url("../img/oc_icons.png");
   background-position:      0px -240px;
   width:                    18px;
-  height:                   16px;
+  /*height:                   16px;*/
   margin-right:             5px;
   margin-left:              5px; 
 }
