MH-4059 - changes from saltevogt
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7638 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/shared-resources/player/engage-hybrid-player/css/embed-hybrid-player.css
+++ b/shared-resources/player/engage-hybrid-player/css/embed-hybrid-player.css
@@ -152,6 +152,7 @@ table
   margin-right:             10px;
 }
 
+
 #oc_volume-dropdown li
 {   
   float:                    left;
@@ -165,14 +166,14 @@ table
   position:                 absolute;
   visibility:               hidden;
   border-top:               1px solid white
-}
-       
+}   
+        
 #oc_volume-dropdown li ul li
 {   
   float:                    none;
   display:                  inline;
 }
-        
+      
 #oc_volume-dropdown-div
 {   
   height:                   28px;
@@ -208,7 +209,7 @@ table
   background-color:         #EEEEEE;
 }
 
-.oc_slider-volume-Thumb
+oc_slider-volume-Thumb
 {
   background:               transparent url("../img/oc_icons.png");
   background-position:      -30px -270px;
@@ -247,7 +248,6 @@ table
   position:                 absolute;
   margin-top:               -3px;
 }
-
 
 #oc_video-cc
 {
@@ -312,7 +312,6 @@ table
   background-position:      0 -4px;*/
   text-align:               center;
 }
-
 
 
 .oc_progress-bar
@@ -433,7 +432,6 @@ table
   top: -7px;
   height: 7px;
 }
-
 .progress-text 
 {
   display:block;
