MH-1669: all, capturing and processing screen expose the option to be updated periodically. add UI elements (to the views mentioned) to choose if table should be updated and with which interval.
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7642 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
@@ -363,6 +363,15 @@ select { font-size:1.15em; }
   font-weight: bold;
 }
 
+/* Refresh controls and text */
+.refresh-text-enabled {
+ color: black;
+}
+
+.refresh-text-disabled {
+  color: gray;
+}
+
 /* Fluid Skinning System Overrides */
 
 .fl-theme-coal h1 {
